# Churn-Prediction-LLM

./: Makefile  README.md  TECHNICAL_REPORT.md  api_server.py  create_env.sh  main.py  pyproject.toml  setup_data_dirs.sh  streamlit_app.py  test_api_simple.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: api_test.ipynb  eda.ipynb  validation.ipynb
reports/: metrics_report.txt  validation_metrics_report.txt
src/: config.py  dataset.py  features.py  full_pipeline.py  hyperparameter_tuning.py  llm.py  llm_models.py  predictor.py  preprocessor.py  target_encoder.py
