[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Churn-Prediction-LLM that take an input in natural language and extract features that is passed to a machine learning model and based on the classification of it the LLM response to marketing team"
authors = [
  { name = "Fady Adel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "matplotlib>=3.10.6",
    "mkdocs",
    "pandas>=2.3.2",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

